--- a/loading.html
+++ b/loading.html
@@ -24,6 +24,8 @@
         justify-content: center;
         align-items: center;
         font-family: Roboto;
+        max-width: 600px;
+        margin: 0 auto;
     }
 
     .counter {
@@ -65,7 +67,7 @@
     }
 
     .heading {
-        font-size: 48px;
+        font-size: 43px;
         margin-bottom: 50px;
         color: aqua;
     }
@@ -93,7 +95,7 @@
   <body>
     <div class="loading-page">
       <div class="counter">
-        <h2 class="heading">His Mind</h2>
+        <h2 class="heading">His Mind !</h2>
         <p>Loading...</p>
         <h1>0%</h1>
         <hr />
