--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Heart</title>
     <style>
-        body{
+        body {
             margin: 0;
             padding: 0;
         }
-        .container{
+
+        .container {
             background: #faf3cc;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            max-width: 600px;
+            margin: 0 auto;
         }
-        .btn{
+
+        .btn {
             text-decoration: none;
             cursor: pointer;
             position: relative;
             padding: 10px 20px;
             background: white;
-            font-size: 28px;
+            font-size: 38px;
             border-top-right-radius: 10px;
             border-bottom-left-radius: 10px;
             transition: all 1s;
         }
+
         .btn::after,
-        .btn::before{
+        .btn::before {
             content: " ";
             width: 10px;
             height: 10px;
@@ -36,32 +42,38 @@
             border: 0px solid #fff;
             transition: all 1s;
         }
-        .btn::after{
+
+        .btn::after {
             top: -1px;
             left: -1px;
             border-top: 5px solid black;
             border-left: 5px solid black;
         }
-        .btn::before{
+
+        .btn::before {
             bottom: -1px;
             right: -1px;
             border-bottom: 5px solid black;
             border-right: 5px solid black;
         }
-        .btn:hover{
+
+        .btn:hover {
             border-top-right-radius: 0px;
             border-bottom-left-radius: 0px;
         }
+
         .btn:hover::before,
-        .btn:hover::after{
+        .btn:hover::after {
             width: 100%;
             height: 100%;
         }
     </style>
 </head>
+
 <body>
- <div class="container">
-    <a class="btn" href="loading.html">Can i hold your hand ?</a>
- </div>
+    <div class="container">
+        <a class="btn" href="loading.html">Can I Hold Your Hand ?</a>
+    </div>
 </body>
+
 </html>
