--- a/heart.html
+++ b/heart.html
@@ -7,13 +7,12 @@
     <title>My Heart</title>
     <style>
         body {
-            margin: 0 auto;
+            margin: 0;
             padding: 0;
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            max-width: 600px;
 
         }
 
@@ -75,7 +74,7 @@
 
         h1 {
             position: absolute;
-            top: 167px;
+            top: 225px;
             color: aqua;
             font-size: 65px;
         }
